--- a/tasks/setup-Debian.yml
+++ b/tasks/setup-Debian.yml
@@ -1,4 +1,15 @@
 ---
+
+- name: Add repository key
+  apt_key: url={{ php_debian_pkg_key }} state=present 
+  when: php_pkg_managed
+  when: php_debian_pkg_managed
+
+- name: Install repository
+  apt_repository: repo='{{ php_debian_pkg_name}}'
+                  state=present
+  when: php_debian_pkg_managed
+
 - name: Update apt cache.
   apt: update_cache=yes cache_valid_time=86400
 
