--- a/tasks/setup-Debian.yml
+++ b/tasks/setup-Debian.yml
@@ -6,9 +6,10 @@
   when: php_debian_pkg_managed
 
 - name: Install repository
-  apt_repository: repo='{{ php_debian_pkg_name}}'
+  apt_repository: repo='{{ item }}'
                   state=present
   when: php_debian_pkg_managed
+  with_items: "{{ php_debian_pkg_name }}"
 
 - name: Update apt cache.
   apt: update_cache=yes cache_valid_time=86400
